# imgutils

./: 4to3.cpp  CMakeLists.txt  EigenImage.hpp  Image.hpp  README.md  anti_dead_pixel.c  anti_dead_pixel.cpp  apply_colormap.cpp  apply_colormap.py  apply_histogram.cpp  awgn.cpp  cfa_colorize.cpp  cfa_rebuild.cpp  cfa_split.cpp  convolve.cpp  dct.c  dct.cpp  expand_GrRBGb.py  extract_GrRBGb.py  fpsnr.cpp  ftpsnr.cpp  iion.cpp  imdiff.cpp  ismonochrome.cpp  makemonochrome.cpp  num_pixels.c  num_pixels.cpp  psnr.cpp  qauto.cpp  readRGB.c  readRGB.cpp  smooth_detector.cpp  utils.c  utils.cpp  utils.h  utils.hpp  vst.cpp
